# casperswebsite

./: .gitignore  LICENSE  README.md  dummy.py  pyproject.toml
.github/workflows/: deploy.yaml
compiled/: index.html
src/: run_dashboard.py
src/casperswebsite/: compile_dashboard.py  run_dashboard.py  serve_static_locally.py
src/casperswebsite/bokeh_dataflows/: __init__.py
src/casperswebsite/dashboard/: index.html  overview_base.py  template.py
src/casperswebsite/dashboard/overviews/: authors_page.py  home.py  howitsmade.py  resume.py  resume.yaml  shirt.py  storyguide.py
src/casperswebsite/dashboard/pages/: authors_page.py  home.py  howitsmade.py  jasmin.py  resume.py  shirt.py  storyguide.py
src/casperswebsite/dashboard/pages/energy_simulation/: __init__.py  cds.py  cds.pyi  draw_graphic.js
src/casperswebsite/dashboard/pages/energy_simulation/cds_callbacks/: sun_intensity.js  sun_plot.js  time_series.js  weibull_bins.js  wind_data.js  wind_distance.js  wind_plot.js
src/casperswebsite/dashboard/pages/energy_simulation/graphs/: __init__.py  styled.py
src/casperswebsite/dashbuilder/: contract.py  index.html  renderer.py
src/casperswebsite/general_tools/: __init__.py
src/casperswebsite/static/: writing_options.yaml
src/dashboard/: index.html  overview_base.py  run_dashboard.py  template.py
src/dashboard/overviews/: authors_page.py  home.py  home2.py  howitsmade.py  resume.py  resume.yaml  shirt.py  storyguide.py
src/data/: shared_cache.py
src/general_tools/: card_builder.py  general_tools.py
(+1 files in other folders)
