[project]
name = "casperswebsite"
version = "0.1.0"
description = "Personal site / Panel dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "panel>=1.4",
    "pydantic==2.12.5",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
