[project]
name = "casperswebsite"
version = "0.1.0"
description = "Personal site / Panel dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh==3.9.0",
    "pydantic==2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/casperswebsite"]
[tool.ruff]
line-length = 160